--- a/webconsole/src/components/Profile/Profile.css
+++ b/webconsole/src/components/Profile/Profile.css
@@ -7,8 +7,6 @@
 .profile-content {
   display: flex;
   width: 100%;
-  margin-top: 4rem;
-  margin-right: 14rem;
 }
 
 .profile-section {
@@ -18,10 +16,9 @@
   justify-content: center;
   align-items: center;
   background-color: rgb(247, 247, 247);
-  overflow-y: scroll;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 4rem;
+  margin-left: 14rem;
 }
 
 .profile-info {
@@ -86,6 +83,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
+  text-align: left;
   width: 48%;
 }
 
